--- a/index.html
+++ b/index.html
@@ -1,36 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <header>
-        <nav id="navbar">
+    <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins|Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-        </nav>
+  <body>
+    <!-- START NAV IN HEADER -->
+
+    <header>
+      <nav id="navbar" class="nav">
+        <ul id="nav-list">
+          <li><a href="#welcome-section">About</a></li>
+          <li><a href="##projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <section id="welcome-section">
-        <h1>Hello, I AM AMIN PAHLAVANI</h1>
-        <P>a web developer</P>
+    <!-- END NAV -->
+
+    <!-- START WELCOME SECTION -->
+
+    <section id="welcome-section" class="welcome-section">
+      <h1>Hello, I AM AMIN PAHLAVANI</h1>
+      <p>a web developer</p>
     </section>
 
-    <section id="projects">
-        <div class="project-tile">
+    <!-- END WELCOME SECTION -->
 
-        </div>
+    <!-- START PROJECT SECTION -->
+
+    <section id="projects" class="projects-section">
+      <h2 class="projects-section-header">These are some of my projects</h2>
+
+      <div class="project-grid">
+        <a
+          href="https://codepen.io/phamin2001/full/YzPJgoN"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://live.staticflickr.com/65535/49396155881_01269f09f9_b.jpg"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Tribute Page
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
+          href="https://codepen.io/phamin2001/full/mdyQvWQ"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            src="https://raw.githubusercontent.com/phamin2001/Survey-Form/master/images/1.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Survey Form
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
+          href="https://codepen.io/phamin2001/full/OJPdbZd"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            src="https://raw.githubusercontent.com/phamin2001/LandingPage/master/images/Web_Developer.gif"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Product Landiing Page
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
+          href="https://codepen.io/phamin2001/full/MWYRXmZ"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            src="https://raw.githubusercontent.com/phamin2001/Technical-Documentation-Page/master/images/1.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Technical Documentation Page
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+      </div>
     </section>
 
-    
+    <!-- END PROJECT SECTION -->
 
+    <!-- START CONTACT SECTION -->
 
+    <section id="contact" class="contact-section">
+      <div class="contact-section-header">
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+        <a
+          id="profile-link"
+          href="https://www.linkedin.com/in/aminpahlavani/"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fa fa-linkedin"></i> LinkedIn</a
+        >
 
+        <a
+          id="profile-link"
+          href="https://github.com/phamin2001"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fa fa-github"></i> GitHub</a
+        >
 
+        <a
+          href="https://twitter.com/Amin_Pahlavani"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fa fa-twitter"></i> Twitter</a
+        >
 
-    
-</body>
+        <a href="mailto:amin.pahlavani@gmail.com" class="btn contact-details"
+          ><i class="fa fa-envelope"></i> Send a mail</a
+        >
+
+        <a href="tel:720-220-9144" class="btn contact-details"
+          ><i class="fa fa-phone-square"></i> Call me</a
+        >
+      </div>
+    </section>
+
+    <!-- END CONTACT SECTION -->
+  </body>
 </html>
