--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <!-- START NAV IN HEADER -->
+    <!-- START NAV & HEADER -->
 
     <header>
       <nav id="navbar" class="nav">
@@ -29,7 +29,7 @@
       </nav>
     </header>
 
-    <!-- END NAV -->
+    <!-- END NAV & HEADER-->
 
     <!-- START WELCOME SECTION -->
 
@@ -149,11 +149,22 @@
         >
 
         <a href="tel:720-220-9144" class="btn contact-details"
-          ><i class="fa fa-phone-square"></i> Call me</a
+          ><i class="fa fa-mobile"></i> Call me</a
         >
       </div>
     </section>
 
     <!-- END CONTACT SECTION -->
+
+    <!-- START FOOTER SECTION -->
+
+    <footer>
+      <p>Created by Amin Pahlavani</p>
+      <p>
+        &copy; 2020. All Rights Reserved.
+      </p>
+    </footer>
+
+    <!-- END FOOTER SETCTION -->
   </body>
 </html>
