working on css/welcome section

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <header>
       <nav id="navbar" class="nav">
-        <ul id="nav-list">
+        <ul class="nav-list">
           <li><a href="#welcome-section">About</a></li>
-          <li><a href="##projects">Projects</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
