--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="projects" class="projects-section">
       <h2 class="projects-section-header">These are some of my projects</h2>
 
-      <div class="project-grid">
+      <div class="projects-grid">
         <a
           href="https://codepen.io/phamin2001/full/YzPJgoN"
           target="_blank"
@@ -121,6 +121,8 @@
       <div class="contact-section-header">
         <h2>Let's work together...</h2>
         <p>How do you take your coffee?</p>
+      </div>
+      <div class="contact-links">
         <a
           id="profile-link"
           href="https://www.linkedin.com/in/aminpahlavani/"
