--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         >
           <img
             class="project-image"
-            src="https://live.staticflickr.com/65535/49396155881_01269f09f9_b.jpg"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Tribute%20Page.png"
             alt="project"
           />
           <p class="project-title">
@@ -69,7 +69,7 @@
           class="project project-title"
         >
           <img
-            src="https://raw.githubusercontent.com/phamin2001/Survey-Form/master/images/1.png"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Survey%20From.png"
             alt="project"
           />
           <p class="project-title">
@@ -85,7 +85,7 @@
           class="project project-title"
         >
           <img
-            src="https://raw.githubusercontent.com/phamin2001/LandingPage/master/images/Web_Developer.gif"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Product%20Landing%20Page.png"
             alt="project"
           />
           <p class="project-title">
@@ -101,7 +101,7 @@
           class="project project-title"
         >
           <img
-            src="https://raw.githubusercontent.com/phamin2001/Technical-Documentation-Page/master/images/1.png"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Technical%20Documentation%20Page.png"
             alt="project"
           />
           <p class="project-title">
