edit html title tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Amin Pahlavani</title>
     <link rel="stylesheet" href="index.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins|Raleway&display=swap"
@@ -47,7 +47,7 @@
 
       <div class="projects-grid">
         <a
-          href="https://codepen.io/phamin2001/full/YzPJgoN"
+          href="http://tribute-page-ph.surge.sh/"
           target="_blank"
           class="project project-title"
         >
@@ -64,7 +64,7 @@
         </a>
 
         <a
-          href="https://codepen.io/phamin2001/full/mdyQvWQ"
+          href="http://surveyform-ph.surge.sh"
           target="_blank"
           class="project project-title"
         >
@@ -80,7 +80,7 @@
         </a>
 
         <a
-          href="https://codepen.io/phamin2001/full/OJPdbZd"
+          href="http://landingpage-ph.surge.sh/"
           target="_blank"
           class="project project-title"
         >
@@ -96,7 +96,7 @@
         </a>
 
         <a
-          href="https://codepen.io/phamin2001/full/MWYRXmZ"
+          href="http://technical-documentaion-ph.surge.sh/"
           target="_blank"
           class="project project-title"
         >
