adding hotel project

--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
       <h2 class="projects-section-header">These are some of my projects</h2>
 
       <div class="projects-grid">
+        <a 
+          href="hotelwebsite.surge.sh"
+          target="_blank"
+          class="project project-title"
+        >
+          <img 
+            class="project-image"
+            src="" 
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Hotel Website
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
         <a
           href="http://tribute-page-ph.surge.sh/"
           target="_blank"
