adding src image screenshot for hotel project

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
       <h2 class="projects-section-header">These are some of my projects</h2>
 
       <div class="projects-grid">
-        <a 
-          href="hotelwebsite.surge.sh"
+        <a
+          href="http://hotelwebsite.surge.sh"
           target="_blank"
           class="project project-title"
         >
-          <img 
+          <img
             class="project-image"
-            src="" 
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Hotel%20Website.png"
             alt="project"
           />
           <p class="project-title">
