add screenshot of edgeledger

--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
+
+        <a
+        href="http://edgeledger_website.surge.sh"
+        target="_blank"
+        class="project project-title"
+      >
+        <img
+          class="project-image"
+          src=""
+          alt="project"
+        />
+        <p class="project-title">
+          <span class="code">&lt;</span>
+          EdgeLedger Website
+          <span class="code">&#47;&gt;</span>
+        </p>
+      </a>
+
         <a
           href="http://tribute-page-ph.surge.sh/"
           target="_blank"
