add image link for edgeldger

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       >
         <img
           class="project-image"
-          src=""
+          src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/EdgeLedger%20Website.png"
           alt="project"
         />
         <p class="project-title">
