--- a/index.html
+++ b/index.html
@@ -64,21 +64,38 @@
         </a>
 
         <a
-        href="http://edgeledger_website.surge.sh"
-        target="_blank"
-        class="project project-title"
-      >
-        <img
-          class="project-image"
-          src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/EdgeLedger%20Website.png"
-          alt="project"
-        />
-        <p class="project-title">
-          <span class="code">&lt;</span>
-          EdgeLedger Website
-          <span class="code">&#47;&gt;</span>
-        </p>
-      </a>
+          href="http://edgeledger_website.surge.sh"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/EdgeLedger%20Website.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            EdgeLedger Website
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
+          href="http://presentation_website.surge.sh"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Presentation%20Website.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Presentation Website
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
 
         <a
           href="http://tribute-page-ph.surge.sh/"
