adding hamburger overlay menu

--- a/index.html
+++ b/index.html
@@ -98,6 +98,23 @@
         </a>
 
         <a
+          href="http://hamburger_menu.surge.sh/"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Hamburger%20Overlay%20Menu.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Hamburger Overlay Menu
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
           href="http://tribute-page-ph.surge.sh/"
           target="_blank"
           class="project project-title"
