--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         </a>
 
         <a
-          href="http://edgeledger_website.surge.sh"
+          href="http://edgeledger_websiten.surge.sh"
           target="_blank"
           class="project project-title"
         >
           <img
             class="project-image"
-            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/EdgeLedger%20Website.png"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/EdgeLedger%20Website(2).png"
             alt="project"
           />
           <p class="project-title">
@@ -93,6 +93,23 @@
           <p class="project-title">
             <span class="code">&lt;</span>
             Presentation Website
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
+          href="http://edgeledger_website.surge.sh"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/EdgeLedger%20Website.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            EdgeLedger Website_2
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
