--- a/index.html
+++ b/index.html
@@ -81,6 +81,23 @@
         </a>
 
         <a
+          href="http://knowledge-resume.surge.sh"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Knowledge%20Resume.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            Knowledge Resume
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
           href="http://presentation_website.surge.sh"
           target="_blank"
           class="project project-title"
