add link to news grid project

--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
 
       <div class="projects-grid">
         <a
+          href="http://news_grid.surge.sh"
+          target="_blank"
+          class="project project-title"
+        >
+          <img
+            class="project-image"
+            src="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/News(Grid).png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code">&lt;</span>
+            News Website(grid)
+            <span class="code">&#47;&gt;</span>
+          </p>
+        </a>
+
+        <a
           href="http://hotelwebsite.surge.sh"
           target="_blank"
           class="project project-title"
