--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
-    <meta property="og:site_name" content="Amin Pahlavani Portfolio" />
-    <meta property="og:image" content="" />
 
-    
+    <meta property="og:site_name" content="Amin Pahlavani Portfolio" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/phamin2001/Personal-Portfolio/master/images/Portfolio.png"
+    />
+
     <title>Amin Pahlavani - Web Developer</title>
     <link rel="stylesheet" href="index.css" />
     <link
